tests/error/inout_errors/conflict.err
Error: Type mismatch (at $FILE:12:11)
   | 
10 | @guppy
11 | def test() -> Function[[qubit @ owned], qubit]:
12 |     return foo
   |            ^^^ Expected return value of type `qubit @owned -> qubit`, got
   |                `qubit -> qubit`

Guppy compilation failed due to 1 previous error
